syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "psm/state/v1/metadata.proto";

option go_package = "github.com/pentops/protostate/internal/testproto/gen/test/v1/test_pb";

message FooKeys {
  option (j5.ext.v1.psm).entity_name = "foo";

  string foo_id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.key).primary_key = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  optional string tenant_id = 2 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.key).tenant_key = "tenant",
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  string meta_tenant_id = 3 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.key).tenant_key = "meta_tenant",
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];
}

message FooState {
  psm.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  FooKeys keys = 2 [(buf.validate.field).required = true];

  FooStatus status = 3 [(j5.list.v1.field).enum.filtering = {
    filterable: true
    default_filters: ["FOO_STATUS_ACTIVE"]
  }];

  FooStateData data = 4;
}

message FooStateData {
  string name = 5 [(j5.list.v1.field).string.open_text.searching = {
    searchable: true
    field_identifier: "tsv_name"
  }];

  string field = 6 [(j5.list.v1.field).string.open_text.searching = {
    searchable: true
    field_identifier: "tsv_field"
  }];

  optional string description = 7 [(j5.list.v1.field).string.open_text.searching = {
    searchable: true
    field_identifier: "tsv_description"
  }];

  FooCharacteristics characteristics = 9;
  repeated FooProfile profiles = 10;
}

message FooCharacteristics {
  int64 weight = 1 [(j5.list.v1.field).int64 = {
    filtering: {filterable: true}
    sorting: {sortable: true}
  }];

  int64 height = 2 [(j5.list.v1.field).int64 = {
    filtering: {filterable: true}
    sorting: {sortable: true}
  }];

  int64 length = 3 [(j5.list.v1.field).int64 = {
    filtering: {filterable: true}
    sorting: {sortable: true}
  }];
}

message FooProfile {
  int64 place = 1 [(j5.list.v1.field).int64 = {
    filtering: {filterable: true}
  }];

  string name = 2 [(j5.list.v1.field).string.open_text.searching = {
    searchable: true
    field_identifier: "tsv_profile_name"
  }];
}

enum FooStatus {
  FOO_STATUS_UNSPECIFIED = 0;
  FOO_STATUS_ACTIVE = 1;
  FOO_STATUS_DELETED = 2;
}

message FooEvent {
  psm.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];

  FooKeys keys = 2 [(buf.validate.field).required = true];

  FooEventType event = 3 [(buf.validate.field).required = true];
}

message FooEventType {
  oneof type {
    option (j5.list.v1.oneof).filtering.filterable = true;

    Created created = 1;
    Updated updated = 2;
    Deleted deleted = 3;
  }

  message Created {
    string name = 1;
    string field = 2;
    optional string description = 3;
    optional int64 weight = 4;
    optional int64 height = 5;
    optional int64 length = 6;
    repeated FooProfile profiles = 7;
  }

  message Updated {
    string name = 1;
    string field = 2;
    optional string description = 3;
    optional int64 weight = 4;
    optional int64 height = 5;
    optional int64 length = 6;
    repeated FooProfile profiles = 7;
    bool delete = 8;
  }

  message Deleted {}
}
